--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+   "engines": {
+    "node": "10.15.0"
   },
   "author": "rage",
   "license": "ISC",
