--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
    "engines": {
-    "node": "10.15.0"
+    "node": "10.x"
    }
   },
   "author": "rage",
