--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "NTUwMzU2ODg4ODk4NzY0ODAz.XJ-Iiw.SntjjBCUyx2nC3qua0UozCGB2g8",
+    "token": "",
     "ownerID": "257396303791652875"
 }
